完成模块添加时附加接口的逻辑
