# backend/api/api.bm.go
@@ -1,6 +1,13 @@
 // Code generated by protoc-gen-bm v0.1, DO NOT EDIT.
-// source: api.proto
+// source: api/api.proto
 
+/*
+Package api is a generated blademaster stub package.
+This code was generated with kratos/tool/protobuf/protoc-gen-bm v0.1.
+
+It is generated from these files:
+	api/api.proto
+*/
 package api
 
 import (
@@ -26,8 +33,10 @@ var PathBackendManagerLinksDeleteBySymbol = "/backend-dashboard/backend/links.de
 var PathBackendManagerApisSelectByName = "/backend-dashboard/backend/apis.selectByName"
 var PathBackendManagerApisSelectAll = "/backend-dashboard/backend/apis.selectAll"
 var PathBackendManagerApisInsert = "/backend-dashboard/backend/apis.insert"
+var PathBackendManagerApisInsertByTemp = "/backend-dashboard/backend/apis.insertByTemp"
 var PathBackendManagerApisDeleteByName = "/backend-dashboard/backend/apis.deleteByName"
 var PathBackendManagerTempApiSelectAll = "/backend-dashboard/backend/temp.apis.selectAll"
+var PathBackendManagerTempApiSelectByCategory = "/backend-dashboard/backend/temp.apis.selectByCategory"
 var PathBackendManagerTempApiInsert = "/backend-dashboard/backend/temp.apis.insert"
 var PathBackendManagerTempApiInsertMany = "/backend-dashboard/backend/temp.apis.insertMany"
 var PathBackendManagerStepsInsert = "/backend-dashboard/backend/steps.insert"
@@ -42,6 +51,7 @@ var PathBackendManagerDaoGroupSelectByName = "/backend-dashboard/backend/dao.gro
 var PathBackendManagerDaoGroupsInsert = "/backend-dashboard/backend/dao.groups.insert"
 var PathBackendManagerDaoGroupDeleteByName = "/backend-dashboard/backend/dao.groups.deleteByName"
 var PathBackendManagerDaoGroupUpdateImplement = "/backend-dashboard/backend/dao.groups.updateImplement"
+var PathBackendManagerTempDaoGroupsSelectAll = "/backend-dashboard/backend/temp.dao.groups.selectAll"
 var PathBackendManagerDaoInterfaceInsert = "/backend-dashboard/backend/dao.interface.insert"
 var PathBackendManagerDaoInterfaceDelete = "/backend-dashboard/backend/dao.interface.delete"
 var PathBackendManagerDaoConfigInsert = "/backend-dashboard/backend/dao.config.insert"
@@ -74,9 +84,13 @@ type BackendManagerBMServer interface {
 
 	ApisInsert(ctx context.Context, req *ApiInfo) (resp *ApiInfo, err error)
 
+	ApisInsertByTemp(ctx context.Context, req *AddTmpApiToMdlReq) (resp *ApiInfo, err error)
+
 	ApisDeleteByName(ctx context.Context, req *NameID) (resp *ApiInfo, err error)
 
 	TempApiSelectAll(ctx context.Context, req *Empty) (resp *ApiInfoArray, err error)
+
+	TempApiSelectByCategory(ctx context.Context, req *CategoryIden) (resp *ApiInfoArray, err error)
 
 	TempApiInsert(ctx context.Context, req *ApiInfo) (resp *ApiInfo, err error)
 
@@ -105,6 +119,8 @@ type BackendManagerBMServer interface {
 	DaoGroupDeleteByName(ctx context.Context, req *NameID) (resp *DaoGroup, err error)
 
 	DaoGroupUpdateImplement(ctx context.Context, req *DaoGrpSetImpl) (resp *DaoGroup, err error)
+
+	TempDaoGroupsSelectAll(ctx context.Context, req *Empty) (resp *DaoGroupArray, err error)
 
 	DaoInterfaceInsert(ctx context.Context, req *DaoItfcIst) (resp *DaoInterface, err error)
 
@@ -222,6 +238,15 @@ func backendManagerApisInsert(c *bm.Context) {
 	c.JSON(resp, err)
 }
 
+func backendManagerApisInsertByTemp(c *bm.Context) {
+	p := new(AddTmpApiToMdlReq)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := BackendManagerSvc.ApisInsertByTemp(c, p)
+	c.JSON(resp, err)
+}
+
 func backendManagerApisDeleteByName(c *bm.Context) {
 	p := new(NameID)
 	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
@@ -237,6 +262,15 @@ func backendManagerTempApiSelectAll(c *bm.Context) {
 		return
 	}
 	resp, err := BackendManagerSvc.TempApiSelectAll(c, p)
+	c.JSON(resp, err)
+}
+
+func backendManagerTempApiSelectByCategory(c *bm.Context) {
+	p := new(CategoryIden)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := BackendManagerSvc.TempApiSelectByCategory(c, p)
 	c.JSON(resp, err)
 }
 
@@ -366,6 +400,15 @@ func backendManagerDaoGroupUpdateImplement(c *bm.Context) {
 	c.JSON(resp, err)
 }
 
+func backendManagerTempDaoGroupsSelectAll(c *bm.Context) {
+	p := new(Empty)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := BackendManagerSvc.TempDaoGroupsSelectAll(c, p)
+	c.JSON(resp, err)
+}
+
 func backendManagerDaoInterfaceInsert(c *bm.Context) {
 	p := new(DaoItfcIst)
 	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
@@ -443,8 +486,10 @@ func RegisterBackendManagerBMServer(e *bm.Engine, server BackendManagerBMServer)
 	e.POST("/backend-dashboard/backend/apis.selectByName", backendManagerApisSelectByName)
 	e.POST("/backend-dashboard/backend/apis.selectAll", backendManagerApisSelectAll)
 	e.POST("/backend-dashboard/backend/apis.insert", backendManagerApisInsert)
+	e.POST("/backend-dashboard/backend/apis.insertByTemp", backendManagerApisInsertByTemp)
 	e.POST("/backend-dashboard/backend/apis.deleteByName", backendManagerApisDeleteByName)
 	e.POST("/backend-dashboard/backend/temp.apis.selectAll", backendManagerTempApiSelectAll)
+	e.POST("/backend-dashboard/backend/temp.apis.selectByCategory", backendManagerTempApiSelectByCategory)
 	e.POST("/backend-dashboard/backend/temp.apis.insert", backendManagerTempApiInsert)
 	e.POST("/backend-dashboard/backend/temp.apis.insertMany", backendManagerTempApiInsertMany)
 	e.POST("/backend-dashboard/backend/steps.insert", backendManagerStepsInsert)
@@ -459,6 +504,7 @@ func RegisterBackendManagerBMServer(e *bm.Engine, server BackendManagerBMServer)
 	e.POST("/backend-dashboard/backend/dao.groups.insert", backendManagerDaoGroupsInsert)
 	e.POST("/backend-dashboard/backend/dao.groups.deleteByName", backendManagerDaoGroupDeleteByName)
 	e.POST("/backend-dashboard/backend/dao.groups.updateImplement", backendManagerDaoGroupUpdateImplement)
+	e.POST("/backend-dashboard/backend/temp.dao.groups.selectAll", backendManagerTempDaoGroupsSelectAll)
 	e.POST("/backend-dashboard/backend/dao.interface.insert", backendManagerDaoInterfaceInsert)
 	e.POST("/backend-dashboard/backend/dao.interface.delete", backendManagerDaoInterfaceDelete)
 	e.POST("/backend-dashboard/backend/dao.config.insert", backendManagerDaoConfigInsert)
